# SEforDS

./: pyproject.toml
01_Writing_Good_Code/: chapter_01.ipynb
02_Analyzing_Code_Performance/: chapter_02.ipynb
03_Data_Structures/: chapter_03_native_python.ipynb  chapter_03_numpy.ipynb  chapter_03_pandas.ipynb
