[project]
name = "sefords"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (==24.3.0)",
    "dask (==2025.3.0)",
    "faker (==23.2.1)",
    "fastapi (==0.110.0)",
    "line-profiler (==4.1.2)",
    "matplotlib (==3.8.3)",
    "numpy (==1.26.4)",
    "openpyxl (==3.1.2)",
    "pandas (==2.2.1)",
    "pandera (==0.18.0)",
    "pydantic (==2.6.3)",
    "pytest (==8.0.2)",
    "requests (==2.32.0)",
    "scikit-learn (==1.5.0)",
    "scipy (==1.12.0)",
    "snakeviz (==2.2.0)",
    "uvicorn (==0.27.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

